[package]
name = "ws_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "console"
]}
js-sys = "0.3"
